# redaesth_ai

./: .env.example  .gitignore  ARCHITECTURE.md  CALIBRATION_TRAINING_SPEC.md  DECISION_LOG.md  Makefile  PRODUCTION_CORPUS_REPORT.md  README.md  RESEARCH_REPORT.md  STATUS.md  SYNTHETIC_DATASET_SPECIFICATION.md  SYNTHETIC_GENERATION_REPORT.md  TRAINING_READINESS_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py  tatus --ignored
alembic/: README.md
data/: README.md
docs/: README.md
evaluation/: README.md
export/: README.md
memory/: README.md  __init__.py  event_schema.py  event_store.py
notebooks/: README.md
pipeline/: README.md  build_final_dataset.py  clean.py  download.py  generate_synthetic.py  score.py
prompts/: README.md
redaesth/: README.md  __init__.py
redaesth_ai/: README.md  __init__.py
research/: README.md
retrieval/: README.md
src/: README.md
synthetic/: README.md
tests/: README.md  synthetic_test_fixtures.py  test_cleaning_pipeline.py  test_coaching_eval.py  test_config.py  test_dataset_pipeline.py  test_final_audit.py  test_final_dataset_pipeline.py  test_final_split.py  test_final_spot_check.py  test_scoring_pipeline.py  test_synthetic_generator.py  test_synthetic_memory.py  test_synthetic_personas.py  test_synthetic_production_factory.py  test_synthetic_rubric.py  test_synthetic_scenarios.py  test_synthetic_schema.py  test_synthetic_validation.py  test_training_pipeline.py
training/: README.md  __init__.py  callbacks.py  dataset.py  evaluation.py  export.py  kaggle_launcher.py  model.py  (+4 more)
(+53 files in other folders)
